# Custodian

./: .custodian.yaml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .vulture_whitelist.py  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.console/: .context  backlog.md  log.md  task.md
.custodian/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/design/: detector_disposition_matrix.md
src/custodian/: __init__.py
src/custodian/adapters/: base.py  mypy.py  registry.py  ruff.py  semgrep.py  ty.py  vulture.py
tests/: conftest.py  test_adapter_base.py  test_annotation_detectors.py  test_c20_detector.py  test_c31_n1_detectors.py  test_c34_detector.py  test_c35_detector.py  test_c36_detector.py  test_c37_detector.py  test_c38_detector.py  test_c39_detector.py  test_c40_detector.py  test_c41_detector.py  test_c42_detector.py  test_c43_detector.py  test_c4_c9_c23_detectors.py  test_c7_c15_c16_c17_c18_detectors.py  test_call_graph_detectors.py  test_cli_audit.py  test_cli_doctor.py  test_code_health_detectors.py  test_codemod_base.py  test_complexity_detectors.py  test_config_loader.py  test_d10_detector.py  test_d3_detector.py  test_d7_detector.py  test_d8_detector.py  test_d9_detector.py  test_dead_code_detectors.py  test_detector.py  test_finding.py  test_ghost_detectors.py  test_import_detectors.py  test_integration_pipeline.py  test_k3_detector.py  test_mypy_adapter.py  test_n2_detector.py  test_new_detectors.py  test_plugin_loader.py  (+15 more)
(+48 files in other folders)
