[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custodian"
version = "0.1.0"
description = "Cross-repo audit + maintenance toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]
# Tool adapters — install to enable adapter-backed detection
tools = [
    "mypy>=1.8",
    "vulture>=2.11",
    # ty is from Astral (uv install ty); add if using ty adapter
]

[project.scripts]
custodian-audit = "custodian.cli.audit:main"
custodian-doctor = "custodian.cli.doctor:main"
custodian-multi = "custodian.cli.multi:main"
custodian-fix = "custodian.cli.fix:main"
custodian-config = "custodian.cli.config_migrate:main"
custodian-report = "custodian.cli.report:main"
custodian = "custodian.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
